# -insightful-routines-analysis

./: .gitignore  README.md  environment.yml  pyproject.toml
insightful-routines-analysis/: config.py
insightful_routines_analysis/: 1_photo_processing.ipynb  1_rename_photo_by_date.ipynb  2_customizing_data.ipynb  2_photo_processing.ipynb  3_customizing_data.ipynb  3_preprocessing_data.ipynb  4_analyz_data.ipynb  5_prediction.ipynb  6_prediction.ipynb
