[tool.poetry]
name = "insightful-routines-analysis"
version = "0.1.0"
description = ""
authors = ["Anzhelina Shevchuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
tensorflow-cpu = "^2.11.1"
tensorflow-hub = "^0.13.0"
seaborn = "^0.12.2"
sklearn2pmml = "^0.81.0"
opencv-python = {version = "^4.7.0"}
ultralytics = "^8.0.0"
optuna = "^3.6.1"
mtcnn = "^0.1.1"
exifread = "^3.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", extras = ["jupyter"]}
pytest = "7.2.0"
ipython = "^8.24.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
